--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "9.5.9"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
