Run action with basic phpunit command
Signed-off-by: FloKnapp <office@florianknapp.de>

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run test suite
-      run: composer run-script test
+      run: vendor/bin/phpunit
 
   finish:
     needs: test
