--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
         "phpunit/phpunit": "9.5.9"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit -c phpunit.xml"
     }
 }
